[package]
name = "tribufu-constants"
version = "1.3.0"
description = "Tribufu Constants"
repository = "https://github.com/tribufu/tribufu-rust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "tribufu_constants"
crate-type = ["rlib"]
path = "lib.rs"

[build-dependencies]
vergen = { version = "=5.1.5", default-features = false, features = [
    "build",
    "cargo",
    "rustc",
] }
