[package]
name = "tribufu-error"
version = "1.3.0"
description = "Tribufu Error"
repository = "https://github.com/tribufu/tribufu-rust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "tribufu_error"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
anyhow = "1.0.44"
thiserror = "2.0.12"
