[package]
name = "tribufu-json"
version = "1.3.0"
description = "Tribufu Json"
repository = "https://github.com/tribufu/tribufu-rust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "tribufu_json"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
tribufu-error = { version = "1.3.0", path = "../error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
