[package]
name = "tribufu-log"
version = "1.3.0"
description = "Tribufu Log"
repository = "https://github.com/tribufu/tribufu-rust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "tribufu_log"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
tribufu-error = { version = "1.3.0", path = "../error" }
chrono = "0.4.23"
env_logger = "0.10.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
