[package]
name = "tribufu-platform"
version = "1.3.0"
description = "Tribufu Platform"
repository = "https://github.com/tribufu/tribufu-rust"
authors = ["Tribufu <contact@tribufu.com>"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "tribufu_platform"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
tribufu-error = { version = "1.3.0", path = "../error" }
dunce = "1.0.4"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
dirs = "5.0.1"
